minor overflow fix of applicants list

--- a/vote/static/vote/css/style.css
+++ b/vote/static/vote/css/style.css
@@ -72,6 +72,7 @@ table.vote-list tfoot td {
 
 table.vote-list td.applicant {
     padding-left: 0;
+    max-width: 430px;
 }
 
 .vote-list .applicant .col-3 {
